# Decentralised-Voting-system

./: .gitignore  README.md  ape-config.yaml  pyproject.toml  server.py
.build/: Election.json  __local__.json
app/: app.py  authentication.py
cache/: solidity-files-cache.json
contracts/: Election.sol
scripts/: ElectionTests.py  deploy.py  helper_functions.py
templates/: add_candidate.html  deploy.html  election.html  index.html  vote.html
tests/: conftest.py
tests/unit/: Election.t.py
